force-app/main/default/objects/Account/fields/Default_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Default_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Sales Rep</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Default Sales Rep)</relationshipLabel>
    <relationshipName>Partner_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>