force-app/main/default/objects/Account/fields/Electricity_Provider__c.field-meta.xml
<CustomField>
    <fullName>Electricity_Provider__c</fullName>
    <label>Electricity Provider</label>
    <length>50</length>
    <type>Text</type>
</CustomField>