force-app/main/default/objects/Account/fields/FICO__c.field-meta.xml
<CustomField>
    <fullName>FICO__c</fullName>
    <defaultValue>0</defaultValue>
    <description>For the Partner QC Scorecard. 700-750 = 1  &gt;750 = 2.</description>
    <inlineHelpText>For the Partner QC Scorecard. 700-750 = 1  &gt;750 = 2.</inlineHelpText>
    <label>FICO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>