force-app/main/default/objects/Account/fields/First_CS_Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>First_CS_Bill_Date__c</fullName>
    <inlineHelpText>Set when new invoices are downloaded from Zuora for attrition tracking and subscription length analysis</inlineHelpText>
    <label>First Bill Date</label>
    <type>Date</type>
</CustomField>