force-app/main/default/objects/Account/fields/First_Login_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Login_Date__c</fullName>
    <label>First Login Date</label>
    <type>DateTime</type>
</CustomField>