force-app/main/default/objects/Account/fields/Former_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Former_Company_Name__c</fullName>
    <label>Former Company Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>