force-app/main/default/objects/Account/fields/GC_CS_License__c.field-meta.xml
<CustomField>
    <fullName>GC_CS_License__c</fullName>
    <defaultValue>0</defaultValue>
    <description>For the Partner QC Scorecard. No= 0 / Yes = 1</description>
    <inlineHelpText>For the Partner QC Scorecard. No= 0 / Yes = 1</inlineHelpText>
    <label>GC/CS License</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>