force-app/main/default/objects/Account/fields/Install_Issues__c.field-meta.xml
<CustomField>
    <fullName>Install_Issues__c</fullName>
    <defaultValue>0</defaultValue>
    <description>For the Partner QC Scorecard. -3 per Issue.</description>
    <inlineHelpText>For the Partner QC Scorecard. -3 per Issue.</inlineHelpText>
    <label>Install Issues</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>