force-app/main/default/objects/Account/fields/Key_Account__c.field-meta.xml
<CustomField>
    <fullName>Key_Account__c</fullName>
    <description>Select to mark client affiliation, state official, V.I.P., etc. to show users these accounts may require extra attention.</description>
    <inlineHelpText>Select to mark client affiliation, state official, V.I.P., etc. to show users these accounts may require extra attention.</inlineHelpText>
    <label>Key Account</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Key Account</fullName>
                
                
                    <label>Key Account</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>