force-app/main/default/objects/Account/fields/LASERCA__X4506_T_Email__c.field-meta.xml
<CustomField>
    <fullName>LASERCA__X4506_T_Email__c</fullName>
    <label>4506-T Email</label>
    <type>Email</type>
</CustomField>