force-app/main/default/objects/Account/fields/Last_Bill_Send_Date_New_Charges_Zuora__c.field-meta.xml
<CustomField>
    <fullName>Last_Bill_Send_Date_New_Charges_Zuora__c</fullName>
    <inlineHelpText>Last Invoice Date where new charges were &gt; 0</inlineHelpText>
    <label>Last Bill Send Date New Charges Zuora</label>
    <type>Date</type>
</CustomField>