force-app/main/default/objects/Account/fields/Last_Contact_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Date_Formula__c</fullName>
    <formula>LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date of most recent event from Activity History</inlineHelpText>
    <label>Last Contact Date</label>
    <type>Date</type>
</CustomField>