force-app/main/default/objects/Account/fields/Late_Fee_Payments__c.field-meta.xml
<CustomField>
    <fullName>Late_Fee_Payments__c</fullName>
    <label>Late Fee Payments</label>
    <summarizedField>Account_Bill__c.Late_Fee_Payments__c</summarizedField>
    <summaryForeignKey>Account_Bill__c.Parent_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>