force-app/main/default/objects/Account/fields/Letter_1__c.field-meta.xml
<CustomField>
    <fullName>Letter_1__c</fullName>
    <inlineHelpText>Date of initial letter send</inlineHelpText>
    <label>Letter 1</label>
    <type>Date</type>
</CustomField>