force-app/main/default/objects/Account/fields/License_Revoked__c.field-meta.xml
<CustomField>
    <fullName>License_Revoked__c</fullName>
    <label>License Revoked?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>