force-app/main/default/objects/Account/fields/License_Revoked_Explanation__c.field-meta.xml
<CustomField>
    <fullName>License_Revoked_Explanation__c</fullName>
    <label>License Revoked Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>