force-app/main/default/objects/Account/fields/LiveText__Active__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Active__c</fullName>
    <label>Active</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>No</fullName>
                
                
                    <label>No</label>
                
                </value>
            
                <value>
                
                    <fullName>Yes</fullName>
                
                
                    <label>Yes</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>