force-app/main/default/objects/Account/fields/Max_Overdue_Due_Date_Merge__c.field-meta.xml
<CustomField>
    <fullName>Max_Overdue_Due_Date_Merge__c</fullName>
    <formula>Max_Overdue_Due_Date_Zuora__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Overdue Due Date</label>
    <type>Date</type>
</CustomField>