force-app/main/default/objects/Account/fields/Max_Overdue_Due_Date_Zuora__c.field-meta.xml
<CustomField>
    <fullName>Max_Overdue_Due_Date_Zuora__c</fullName>
    <inlineHelpText>Zuora Data : Due date of oldest invoice or debit memo with a balance</inlineHelpText>
    <label>Max Overdue Due Date Zuora</label>
    <type>Date</type>
</CustomField>