force-app/main/default/objects/Account/fields/Maxed_Out_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Maxed_Out_Opportunities__c</fullName>
    <description>If any Opportunity linked to this account has the checkbox &quot;Undersubscribed but at max capacity&quot; checked, fills in here</description>
    <label>Maxed Out Opportunities</label>
    <summaryFilterItems>
        
            <field>Opportunity.Undersubscribed_but_at_max_capacity__c</field>
        
            <operation>equals</operation>
        
            <value>True</value>
        
        </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>