force-app/main/default/objects/Account/fields/Moody_s_Risk_Calc__c.field-meta.xml
<CustomField>
    <fullName>Moody_s_Risk_Calc__c</fullName>
    <inlineHelpText>Risk Calc score calculated using financial documents provided during enrollment</inlineHelpText>
    <label>Moody&apos;s Risk Calc</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>Moody_s_Ratings</valueSetName>
        
        </valueSet>
</CustomField>