force-app/main/default/objects/Account/fields/Number_of_Active_Contracts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Active_Contracts__c</fullName>
    <inlineHelpText>The number of active client contracts for this account, updated when Contracts are added or removed, to assist with Client reporting</inlineHelpText>
    <label>Number of Active Client Contracts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>