force-app/main/default/objects/Account/fields/Number_of_Active_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Active_Opportunities__c</fullName>
    <label>Number of Active Opportunities</label>
    <summaryFilterItems>
        
            <field>Opportunity.StageName</field>
        
            <operation>notEqual</operation>
        
            <value>Cancelled, Unqualified, Rejected Contract, Expired, DUPLICATE, Lost</value>
        
        </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>