force-app/main/default/objects/Account/fields/Outstanding_Legal_Action_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Legal_Action_Explanation__c</fullName>
    <description>Are there any outstanding judgements or legal actions pending against the company or its owner(s)?</description>
    <inlineHelpText>Are there any outstanding judgements or legal actions pending against the company or its owner(s)?</inlineHelpText>
    <label>Outstanding Legal Action Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>