force-app/main/default/objects/Account/fields/Outstanding_Legal_Actions__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Legal_Actions__c</fullName>
    <description>Are there any outstanding judgements or legal actions pending against the company or its owner(s)?</description>
    <inlineHelpText>Are there any outstanding judgements or legal actions pending against the company or its owner(s)?</inlineHelpText>
    <label>Outstanding Legal Actions?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Yes</fullName>
                
                
                    <label>Yes</label>
                
                </value>
            
                <value>
                
                    <fullName>No</fullName>
                
                
                    <label>No</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>