force-app/main/default/objects/Account/fields/Override_Delinquency_Removal__c.field-meta.xml
<CustomField>
    <fullName>Override_Delinquency_Removal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This will prevent the subscriptions from automatically going to inactive due to delinquency</inlineHelpText>
    <label>Override Delinquency Removal</label>
    <type>Checkbox</type>
</CustomField>