force-app/main/default/objects/Account/fields/Partner_Commission_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Partner_Commission_Frequency__c</fullName>
    <description>Interval at which partner commissions are paid out to the partner. This field controls the period comprising a Partner Invoice. See PartnerCommissionGenerator.cls</description>
    <label>Partner Commission Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>