force-app/main/default/objects/Account/fields/Partner_Logo__c.field-meta.xml
<CustomField>
    <fullName>Partner_Logo__c</fullName>
    <formula>IF(ISBLANK(Partner__r.Logo__c),&quot;Go to the partner object and load a document Id to the Logo field&quot;,
IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; Partner__r.Logo__c, &quot;Error&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Logo</label>
    <type>Text</type>
</CustomField>