force-app/main/default/objects/Account/fields/Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>Payment_Gateway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used by AccountReconciliationService.reconcileZuoraWithSFDC</description>
    <inlineHelpText>Default payment gateway used for customers subscribed to this client&apos;s systems.</inlineHelpText>
    <label>Payment Gateway</label>
    <referenceTo>Zuora__PaymentGateway__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>