force-app/main/default/objects/Account/fields/Product_Line_Formula__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Formula__c</fullName>
    <formula>IF (AND (RecordType.Name = &quot;Partner Account&quot;,  INCLUDES(Partner__r.Products__c, &quot;Residential Loan&quot;),   INCLUDES(Partner__r.Products__c, &quot;Community Solar&quot;)), &quot;Residential Loan / Community Solar&quot;, 

IF ( OR ( Name = &quot;Co-Applicant Placeholder&quot; , AND (RecordType.Name = &quot;Partner Account&quot;,  INCLUDES(Partner__r.Products__c, &quot;Residential Loan&quot;)), Count_of_RL_Opportunities__c  &gt; 0), 

&quot;Residential Loan&quot;, 

IF (OR( Count_of_CS_Opportunities__c &gt; 0, AND (RecordType.Name = &quot;Partner Account&quot;,  INCLUDES(Partner__r.Products__c, &quot;Community Solar&quot;)), RecordType.Name = &quot;Parent Account&quot; ),

&quot;Community Solar&quot;, 

&quot;Not Defined&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Line</label>
    <type>Text</type>
</CustomField>