force-app/main/default/objects/Account/fields/Recurring_Billing__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>An indicator to tell whether the Property Account is on autopay. Only used to update the message on the bill. To take a customer off of autopay, use the payment component on the Billing Account to Manage Autopay</inlineHelpText>
    <label>Autopay</label>
    <type>Checkbox</type>
</CustomField>