force-app/main/default/objects/Account/fields/Roll_Up_Balance_Net_Late_Payments__c.field-meta.xml
<CustomField>
    <fullName>Roll_Up_Balance_Net_Late_Payments__c</fullName>
    <label>Roll-Up: Balance Net Late Payments</label>
    <summarizedField>Account_Bill__c.Balance_Net_Late_Payments__c</summarizedField>
    <summaryForeignKey>Account_Bill__c.Parent_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>