force-app/main/default/objects/Account/fields/Savings_Adjustments__c.field-meta.xml
<CustomField>
    <fullName>Savings_Adjustments__c</fullName>
    <inlineHelpText>Rollup summary of savings from adjustments linked to this account</inlineHelpText>
    <label>Savings Adjustments</label>
    <summarizedField>Bill_Adjustment__c.Discount__c</summarizedField>
    <summaryForeignKey>Bill_Adjustment__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>