force-app/main/default/objects/Account/fields/Savings_UASB__c.field-meta.xml
<CustomField>
    <fullName>Savings_UASB__c</fullName>
    <inlineHelpText>Rollup summary of Savings on UASBs linked to the Account</inlineHelpText>
    <label>Savings UASB</label>
    <summarizedField>UASB__c.Savings__c</summarizedField>
    <summaryFilterItems>
        <field>UASB__c.Zuora_Id__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>UASB__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>