force-app/main/default/objects/Account/fields/Scout_Contact__c.field-meta.xml
<CustomField>
    <fullName>Scout_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is a lookup to a contact</inlineHelpText>
    <label>Scout Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Scout Contact)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>