force-app/main/default/objects/Account/fields/Sells_LMI__c.field-meta.xml
<CustomField>
    <fullName>Sells_LMI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sells LMI</label>
    <type>Checkbox</type>
</CustomField>