force-app/main/default/objects/Account/fields/Sells_Residential__c.field-meta.xml
<CustomField>
    <fullName>Sells_Residential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sells Resi</label>
    <type>Checkbox</type>
</CustomField>