force-app/main/default/objects/Account/fields/Send_Bills_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Send_Bills_Contact_ID__c</fullName>
    <formula>Send_Bills_Contact__r.Id</formula>
    <label>Send Bills Contact ID</label>
    <type>Text</type>
</CustomField>