force-app/main/default/objects/Account/fields/SSS_Selection_Enabled__c.field-meta.xml
<CustomField>
    <fullName>SSS_Selection_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allows a partner to select a system during customer enrollment on portal when checked</inlineHelpText>
    <label>SSS Selection Enabled</label>
    <type>Checkbox</type>
</CustomField>